supervisor-macros/tests/ui/compile_fail/executor_without_spawn.stderr
error: `executor:` requires a `spawn:` (a parked node is spawned by the application, which picks its own spawner)
 --> tests/ui/compile_fail/executor_without_spawn.rs:9:41
  |
9 |     node A = Pause, deps: [], executor: HIGH;
  |                                         ^^^^
